.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Pension_Reporting__c.object
<CustomObject>
    <description>Pension Reporting records for the period one per Employee-Post reference.</description>
    <fields>
        <fullName>xcdhcm__AE_qualifying_earnings__c</fullName>
        <inlineHelpText>Auto enrolment earnings for the Employee in the period.</inlineHelpText>
        <label>AE qualifying earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__AVC_EAVC__c</fullName>
        <label>AVC (EAVC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Added_years__c</fullName>
        <label>Added years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Additional_regular_cont_ARC__c</fullName>
        <label>Additional regular cont (ARC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Annual_pensionable_salary__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Pensionable_salary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual pensionable salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Comp linked to Pay Detail for main ER/EE pension contribution.</description>
        <label>Compensation</label>
        <referenceTo>xcdhcm__Compensation__c</referenceTo>
        <relationshipLabel>Pension Reportings</relationshipLabel>
        <relationshipName>Pension_Reportings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation_created_date__c</fullName>
        <description>This field is used in report.</description>
        <formula>xcdhcm__Compensation__r.CreatedDate</formula>
        <label>Compensation created date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Compensation_effective_from__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Effective_from__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compensation effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EE_additional_cont_EAPC__c</fullName>
        <label>EE additional cont (EAPC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EE_cont_rate_50_50_scheme__c</fullName>
        <label>EE cont rate - 50/50 scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EE_cont_rate_main_scheme__c</fullName>
        <label>EE cont rate - main scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EE_contribution_50_50_scheme__c</fullName>
        <label>EE contribution - 50/50 scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__EE_contribution_main_scheme__c</fullName>
        <label>EE contribution - main scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ER_additional_cont_RAPC__c</fullName>
        <label>ER additional cont (RAPC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ER_cont_rate_main_scheme__c</fullName>
        <label>ER cont rate - main scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__ER_contribution_main_scheme__c</fullName>
        <label>ER contribution - main scheme</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Effective_date__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Effective_from__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date on which employee started on current salary.</inlineHelpText>
        <label>Effective date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employee_pension_contribution__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Employee_contribution_per_period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee pension contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Employer_pension_contribution__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Employer_contribution_per_period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer pension contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__FTE__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__FTEpercent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FTE%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Firstname__c</fullName>
        <label>Firstname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Full_time_equivalent_hours__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__Companies__r.xcdhcm__Total_Hours_Per_Day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full time equivalent hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Job_title__c</fullName>
        <formula>xcdhcm__Compensation__r.xcdhcm__Role_L__r.Name</formula>
        <label>Job title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Lastname__c</fullName>
        <label>Lastname</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Leave_request_created__c</fullName>
        <description>This field is used in the Pension Changes - Absences report filter.</description>
        <label>Leave request created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Main_scheme__c</fullName>
        <label>Main scheme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Marital_status__c</fullName>
        <label>Marital status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__NIable_earnings__c</fullName>
        <inlineHelpText>Total NIable earnings for the Employee in the period.</inlineHelpText>
        <label>NIable earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__National_insurance_no__c</fullName>
        <formula>xcdhcm__Pay_Summary__r.xcdhcm__National_insurance_number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National insurance no</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Opt_in_date__c</fullName>
        <label>Opt in date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Opt_out_date__c</fullName>
        <label>Opt out date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_additional_EE_cont__c</fullName>
        <label>Other additional EE cont</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_additional_ER_cont__c</fullName>
        <label>Other additional ER cont</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Other_contributions_scheme_name__c</fullName>
        <label>Other contributions - scheme name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Part_time_hours__c</fullName>
        <formula>IF(xcdhcm__Compensation__r.xcdhcm__FTEpercent__c  = 1, null, xcdhcm__Compensation__r.xcdhcm__Contractual_hours_fr__c)</formula>
        <inlineHelpText>Records weekly contractual hours for part time employees; blank where employee works full time.</inlineHelpText>
        <label>Part time hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Part_time_hours_effective_from__c</fullName>
        <formula>IF(OR(xcdhcm__Compensation__r.xcdhcm__FTEpercent__c = 1, AND(NOT(ISBLANK(xcdhcm__Compensation__r.xcdhcm__Previous_compensation__c)), xcdhcm__Compensation__r.xcdhcm__Previous_compensation__r.xcdhcm__FTEpercent__c = 1)),null,xcdhcm__Compensation__r.xcdhcm__Effective_from__c)</formula>
        <inlineHelpText>Where employee works part time, or has changed working hours, records date of starting current hours.</inlineHelpText>
        <label>Part time hours effective from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Part_time_indicator__c</fullName>
        <formula>IF( xcdhcm__Compensation__r.xcdhcm__Role_L__r.xcdhcm__FTE_Ratio__c  &lt; 1 ,
&apos;Y&apos;, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part time indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_Summary__c</fullName>
        <label>Pay Summary</label>
        <referenceTo>xcdhcm__Pay_Summary__c</referenceTo>
        <relationshipLabel>Pension Reportings</relationshipLabel>
        <relationshipName>Pension_Reportings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_period_end_date__c</fullName>
        <formula>xcdhcm__Pay_Summary__r.xcdhcm__XCD_PAY_Period__r.xcdhcm__Effective_to__c</formula>
        <label>Pay period end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pay_run_ID__c</fullName>
        <formula>CASESAFEID(xcdhcm__Pay_Summary__r.xcdhcm__XCD_PAY_Period__c)</formula>
        <label>Pay run ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Pension_Reporting_YTD__c</fullName>
        <label>Pension Reporting YTD</label>
        <referenceTo>xcdhcm__Pension_Reporting_YTD__c</referenceTo>
        <relationshipLabel>Pension Reportings</relationshipLabel>
        <relationshipName>Pension_Reportings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_leaving_date__c</fullName>
        <inlineHelpText>Date on which the employee left this Post.</inlineHelpText>
        <label>Post leaving date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_pensionable_earnings_50_50_scheme__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Pensionable earnings for the Post reference in the period - where Employee paying into 50/50 scheme.</inlineHelpText>
        <label>Post pensionable earnings - 50/50 scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_pensionable_earnings__c</fullName>
        <formula>xcdhcm__Post_pensionable_earnings_main_scheme__c  +  xcdhcm__Post_pensionable_earnings_50_50_scheme__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post pensionable earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Post_pensionable_earnings_main_scheme__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Pensionable earnings for the Post reference in the period - where Employee paying into main scheme.</description>
        <label>Post pensionable earnings - main scheme</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Previous_compensation_pension_start_date__c</fullName>
        <description>This field is used in report.</description>
        <formula>xcdhcm__Compensation__r.xcdhcm__Previous_compensation__r.xcdhcm__Pension_start_date__c</formula>
        <label>Previous compensation pension start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__SMP_indicator__c</fullName>
        <inlineHelpText>Indicates Y if unpaid absence was as a result of parenting leave.</inlineHelpText>
        <label>SMP indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Shared_cost_AVC_RAVC__c</fullName>
        <label>Shared cost AVC (RAVC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Suspension_end__c</fullName>
        <inlineHelpText>Denotes end of period of unpaid absence where no contributions are made.</inlineHelpText>
        <label>Suspension end</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Suspension_start__c</fullName>
        <inlineHelpText>Denotes start of period of unpaid absence where no contributions are made.</inlineHelpText>
        <label>Suspension start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Taxable_earnings__c</fullName>
        <inlineHelpText>Total taxable earnings for the Employee in the period.</inlineHelpText>
        <label>Taxable earnings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Title__c</fullName>
        <label>Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_address_1__c</fullName>
        <label>Work address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_address_2__c</fullName>
        <label>Work address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_address_3__c</fullName>
        <label>Work address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Work_postcode__c</fullName>
        <label>Work postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Workplace_name__c</fullName>
        <label>Workplace name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Pension Reporting</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Pension Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pension Reporting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>xcdhcm__Pension_report_edit_before_final_pay_run</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), xcdhcm__Pay_Summary__r.xcdhcm__Payroll_status__c  &lt;&gt; &quot;Final&quot;)</errorConditionFormula>
        <errorMessage>The Pay Run is not yet made final. Any manual changes to Reporting records will be overwritten when the Pay Run is finalised.</errorMessage>
    </validationRules>
</CustomObject>